[tool.poetry]
name = "tutorials"
version = "0.1.0"
description = ""
authors = ["Scott Cronin <j.scott.cronin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pytorch-lightning = "^1.5.7"
torchvision = "^0.11.2"
flake8 = "^4.0.1"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
